# Weavely

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
docs/: search.js  weavely.html
docs/weavely/: blocks.html  content.html  errors.html  file.html  formatters.html  renderers.html
docs/weavely/file/: factory.html  file.html
docs/weavely/formatters/: base.html  txt.html
docs/weavely/renderers/: base.html  txt.html
html/: index.html  search.js  simple_text_renderer.html
html/simple_text_renderer/: blocks.html  content.html  errors.html  file.html  formatters.html  renderers.html
html/simple_text_renderer/blocks/: base.html  container.html  text.html
html/simple_text_renderer/file/: factory.html  file.html
html/simple_text_renderer/formatters/: base.html
html/simple_text_renderer/renderers/: base.html  mixins.html  txt.html
html/weavely/: blocks.html  errors.html  file.html  formatters.html
html/weavely/file/: file.html
html/weavely/formatters/: base.html
html/weavely/renderers/: txt.html
src/: canvas.py
src/simple_text_renderer/: content.py  errors.py
src/simple_text_renderer/blocks/: base.py  container.py  text.py  txt.py
src/simple_text_renderer/file/: __init__.py  factory.py  file.py  mixins.py
src/simple_text_renderer/formatters/: base.py  txt.py
src/simple_text_renderer/renderers/: base.py  mixins.py  txt.py
src/tests/: __init__.py  test_example.py
src/weavely/: content.py  errors.py
src/weavely/blocks/: __init__.py  base.py  heading.py  paragraph.py  txt.py
src/weavely/file/: factory.py  file.py  mixins.py
src/weavely/formatters/: base.py  txt.py
src/weavely/renderers/: base.py  heading.py  paragraph.py  txt.py
